# Personalize-Expedia-Hotel-Searches

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: deliverables-format.mdc  description-of-the-dataset.mdc  eda.mdc  feature-engineering-plan.mdc  feature-engineering.mdc  hyperparameter-tuning-guidance.mdc  matrix-factorization.mdc  packages.mdc  src-folder-structure.mdc  train-full-data.mdc  xgboost-ranker-setup-and-tuning-guide.mdc
notebooks/: eda.ipynb
src/data/: eda.py  feature_engineering.py
src/dmt/: __init__.py
src/dmt/data/: eda.py
src/dmt/data_processing/: __init__.py  cleaning_and_feature_eng.py  make_dataset.py
src/dmt/models/: __init__.py  lambdaMART.py  predict_model.py  train_final_ensemble.py  train_model.py  train_xgboost.py  tune_lgbm_ranker.py  tune_xgboost_ranker.py
src/dmt/utils/: __init__.py  helpers.py
